# inih

./: .gitignore  CMakeLists.txt  README.md
cpp/: INIReader.cpp  INIReader.h  INIReaderVec.cpp  INIReaderVec.h
tests/: vector_test.cpp  vector_test.ini
